Fix titles hidden by Navbar. Fixes #825

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -115,6 +115,7 @@ html {
 
 #main {
   margin: 0 40px 0 auto;
+  padding-top: 30px;
 }
 
 .plant {
